--- a/Trabalho 2/Trabalho-2.ipynb
+++ b/Trabalho 2/Trabalho-2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 116,
    "metadata": {
     "scrolled": false
    },
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 117,
    "metadata": {
     "scrolled": true
    },
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -599,6 +599,47 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Processando modelo arvore.obj. Vertice inicial: 1263093\nTrank_bark vertice inicial:  1263093\npolySurface1SG1 vertice inicial:  1283355\nProcessando modelo arvore.obj. Vertice final: 1304265\n[1263093, 1283355, 1304265]\n"
+     ]
+    }
+   ],
+   "source": [
+    "modelo = load_model_from_file('arvore/arvore.obj')\n",
+    "\n",
+    "print('Processando modelo arvore.obj. Vertice inicial:',len(vertices_list))\n",
+    "ini_arvore = len(vertices_list)\n",
+    "arvore_vertices_text = []\n",
+    "faces_visited = []\n",
+    "arvore_text_id = [15,16]\n",
+    "for face in modelo['faces']:\n",
+    "    if face[2] not in faces_visited:\n",
+    "        print(face[2], 'vertice inicial: ', len(vertices_list))\n",
+    "        faces_visited.append(face[2])\n",
+    "        arvore_vertices_text.append(len(vertices_list))\n",
+    "    for vertice_id in face[0]:\n",
+    "        vertices_list.append( modelo['vertices'][vertice_id-1] )\n",
+    "    for texture_id in face[1]:\n",
+    "        textures_coord_list.append( modelo['texture'][texture_id-1] )\n",
+    "print('Processando modelo arvore.obj. Vertice final:',len(vertices_list))\n",
+    "fim_arvore = len(vertices_list)\n",
+    "    \n",
+    "arvore_vertices_text.append(fim_arvore)\n",
+    "\n",
+    "print(arvore_vertices_text)\n",
+    "\n",
+    "load_texture_from_file(15,'arvore/tronco.jpg')\n",
+    "load_texture_from_file(16,'arvore/folhas.png')\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -611,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -724,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -768,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -798,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -830,9 +871,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 127,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "IndentationError",
+     "evalue": "unindent does not match any outer indentation level (<tokenize>, line 18)",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<tokenize>\"\u001b[0;36m, line \u001b[0;32m18\u001b[0m\n\u001b[0;31m    glBindTexture(GL_TEXTURE_2D, 14)\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unindent does not match any outer indentation level\n"
+     ]
+    }
+   ],
    "source": [
     "def desenha_tv():\n",
     "    \n",
@@ -858,6 +908,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def desenha_arvore():\n",
+    "    \n",
+    "    # aplica a matriz model\n",
+    "    \n",
+    "    # rotacao\n",
+    "    angle = 0.0\n",
+    "    r_x = 0.0; r_y = 0.0; r_z = 1.0;\n",
+    "    \n",
+    "    # translacao\n",
+    "    t_x = -20.0; t_y = -1.0; t_z = 5.0;\n",
+    "    \n",
+    "    # escala\n",
+    "    s_x = 3.0; s_y = 3.0; s_z = 3.0;\n",
+    "    \n",
+    "    mat_model = model(angle, r_x, r_y, r_z, t_x, t_y, t_z, s_x, s_y, s_z)\n",
+    "    loc_model = glGetUniformLocation(program, \"model\")\n",
+    "    glUniformMatrix4fv(loc_model, 1, GL_TRUE, mat_model)\n",
+    "\n",
+    "    for i in range(0, len(arvore_text_id)):\n",
+    "        glBindTexture(GL_TEXTURE_2D, arvore_text_id[i])\n",
+    "        glDrawArrays(GL_TRIANGLES, arvore_vertices_text[i], arvore_vertices_text[i+1]-arvore_vertices_text[i]) ## renderizandos\n",
+    "    "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -869,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -956,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1003,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1021,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1049,6 +1129,7 @@
     "    desenha_casa()\n",
     "    desenha_sofa()\n",
     "    desenha_tv()\n",
+    "    desenha_arvore()\n",
     "    \n",
     "    rotacao_inc += 0.1\n",
     "    \n",
