--- a/Trabalho 2/Trabalho-2.ipynb
+++ b/Trabalho 2/Trabalho-2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 941,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 942,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 943,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 944,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 945,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 946,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 947,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 948,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 949,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 950,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 951,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 952,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 953,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 954,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 955,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 956,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 957,
    "metadata": {
     "scrolled": false
    },
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 958,
    "metadata": {
     "scrolled": true
    },
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 959,
    "metadata": {},
    "outputs": [
     {
@@ -600,14 +600,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 960,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Processando modelo arvore.obj. Vertice inicial: 1263093\nTrank_bark vertice inicial:  1263093\npolySurface1SG1 vertice inicial:  1283355\nProcessando modelo arvore.obj. Vertice final: 1304265\n[1263093, 1283355, 1304265]\n"
+      "Processando modelo arvore.obj. Vertice inicial: 1263093\nMateriais.001 vertice inicial:  1263093\nMateriais vertice inicial:  1350789\nProcessando modelo arvore.obj. Vertice final: 1408317\n[1263093, 1350789, 1408317]\n"
      ]
     }
    ],
@@ -636,7 +636,7 @@
     "print(arvore_vertices_text)\n",
     "\n",
     "load_texture_from_file(15,'arvore/tronco.jpg')\n",
-    "load_texture_from_file(16,'arvore/folhas.png')\n"
+    "load_texture_from_file(16,'arvore/folha.jpg')\n"
    ]
   },
   {
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 961,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 962,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 963,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -729,11 +729,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 964,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def desenha_caixa():\n",
+    "def desenha_arvore_1():\n",
     "    \n",
     "    \n",
     "    # aplica a matriz model\n",
@@ -743,10 +743,10 @@
     "    r_x = 0.0; r_y = 0.0; r_z = 1.0;\n",
     "    \n",
     "    # translacao\n",
-    "    t_x = 0.0; t_y = 0.0; t_z = 15.0;\n",
+    "    t_x = 30.0; t_y = -1.0; t_z = 30.0;\n",
     "    \n",
     "    # escala\n",
-    "    s_x = 1.0; s_y = 1.0; s_z = 1.0;\n",
+    "    s_x = 3.0; s_y = 3.0; s_z = 3.0;\n",
     "    \n",
     "    mat_model = model(angle, r_x, r_y, r_z, t_x, t_y, t_z, s_x, s_y, s_z)\n",
     "    loc_model = glGetUniformLocation(program, \"model\")\n",
@@ -756,8 +756,9 @@
     "    glBindTexture(GL_TEXTURE_2D, 0)\n",
     "    \n",
     "    \n",
-    "    # desenha o modelo\n",
-    "    glDrawArrays(GL_TRIANGLES, ini_caixa, fim_caixa) ## renderizando\n",
+    "    for i in range(0, len(arvore_text_id)):\n",
+    "        glBindTexture(GL_TEXTURE_2D, arvore_text_id[i])\n",
+    "        glDrawArrays(GL_TRIANGLES, arvore_vertices_text[i], arvore_vertices_text[i+1]-arvore_vertices_text[i]) ## renderizandos\n",
     "    \n",
     "\n",
     "    "
@@ -765,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 965,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -809,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 966,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -839,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 967,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -871,18 +872,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 968,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "IndentationError",
-     "evalue": "unindent does not match any outer indentation level (<tokenize>, line 18)",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<tokenize>\"\u001b[0;36m, line \u001b[0;32m18\u001b[0m\n\u001b[0;31m    glBindTexture(GL_TEXTURE_2D, 14)\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unindent does not match any outer indentation level\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def desenha_tv():\n",
     "    \n",
@@ -909,11 +901,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 969,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def desenha_arvore():\n",
+    "def desenha_arvore_2():\n",
     "    \n",
     "    # aplica a matriz model\n",
     "    \n",
@@ -922,7 +914,7 @@
     "    r_x = 0.0; r_y = 0.0; r_z = 1.0;\n",
     "    \n",
     "    # translacao\n",
-    "    t_x = -20.0; t_y = -1.0; t_z = 5.0;\n",
+    "    t_x = -30.0; t_y = -1.0; t_z = 30.0;\n",
     "    \n",
     "    # escala\n",
     "    s_x = 3.0; s_y = 3.0; s_z = 3.0;\n",
@@ -949,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 970,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1036,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 971,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1083,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 972,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1101,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 973,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1123,13 +1115,12 @@
     "    if polygonal_mode==False:\n",
     "        glPolygonMode(GL_FRONT_AND_BACK,GL_FILL)\n",
     "    \n",
-    "\n",
-    "    desenha_caixa()   \n",
+    "    desenha_arvore_1()\n",
+    "    desenha_arvore_2()   \n",
     "    desenha_terreno()\n",
     "    desenha_casa()\n",
     "    desenha_sofa()\n",
     "    desenha_tv()\n",
-    "    desenha_arvore()\n",
     "    \n",
     "    rotacao_inc += 0.1\n",
     "    \n",
